# demo-schedule-analyzer

./: .dockerignore  .env  .eslintrc.js  .flake8  .gitignore  Dockerfile  NOTES.md  README.md  TODO.md  compose.yaml  demo-calendar.ics  extract.py  goal-demo-schedule.xlsx  main.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: python.yml  webpack.yml
.run/: Main.run.xml  README.md  Test.run.xml
api/: mypy.ini  pyproject.toml  pytest.ini  run.py
api/app/: __init__.py  config.py  exceptions.py  lifecycle.py  models.py  routes.py  types.py
api/app/config/: __init__.py  config.py  config_manager.py  development_config.py  errors.py  production_config.py  testing_config.py
api/app/daos/: __init__.py  _base_dao.py  course_dao.py  demo_dao.py  demo_event_dao.py  schedule_dao.py
api/app/database/: Database.py  __init__.py  clear_db.py  create_db.py  database.py  fill_db_from_calendar.py  make_db.py  session_scope.py
api/app/database/utils/: __init__.py  clear_all.py  empty_db.py  session_scope.py  update_db_from_calendar.py  update_from_calendar.py
api/app/services/: __init__.py  calendar_service.py  schedule_service.py  workbook_service.py
api/app/templates/: index.html
api/app/utils/: __init__.py  is_similar_strings.py
api/app/utils/calendar/: __init__.py  dissect_description.py  extract_courses_from_calendar.py  get_course_term.py  request_calendar.py
api/app/utils/calendar_to_xlsx/: get_course_attribute_options.py  is_broken_event.py
api/app/utils/database/: __init__.py  get_all_courses.py  get_courses_table.py
api/app/utils/schedule/: __init__.py  date_difference_school_weeks.py  generate_schedule.py
api/tests/: __init__.py  app_test.py  config_test.py  conftest.py  create_app_test.py  generate_schedule_test.py  new_course_test.py  new_schedule_test.py  setup_db_test.py  utils.py  x_cleanup_test.py
api/tests/database/: create_db_test.py  dao_test.py
api/tests/models/: course_test.py  crud_test.py  demo_event_test.py  demo_test.py
api/tests/utils/: factories.py
client/: .eslintrc.js  index.tsx  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
client/components/: ColorMode.tsx  CoursesTable.tsx  index.ts
downloads/: demo-calendar.ics
src/: generate_schedule.py  main.py  parse_calendar.py
src/api/: create_app.py  main_new.py  main_old.py  run.py  run_test.py  sanbox.py  scripts.py
src/api/app/: __init__.py  config.py  database.py  models.py
src/api/models/: Course.py  Demo.py  DemoEvent.py  __init__.py
src/api/routes/: __init__.py  (+6 more)
src/client/: App.tsx  index.tsx  style.css
src/static/: bundle.js  index.html  style.css
src/templates/: index.html
src/utils/: __init__.py  date_difference_school_weeks.py  dissect_description.py  extract_course_details_from_calendar.py  generate_schedule.py  get_course_term.py  get_possible_course_attributes.py  get_term.py  is_broken_event.py  parse_calendar.py  remove_html.py
utils/: DemoEvent.py  __init__.py  dissect_description.py  get_calendar.py  get_quarter.py  get_term.py  is_similar_strings.py  remove_html.py
(+99 files in other folders)
