[tool.poetry]
name = "demo-schedule-analyzer"
version = "0.1.0"
description = ""
authors = ["Noah Hinojos <noah.hinojos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icalendar = "^5.0.11"
requests = "^2.31.0"
openpyxl = "^3.1.2"
black = "^23.11.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.4"
sqlalchemy = "^2.0.25"
flake8 = "^7.0.0"
isort = "^5.13.2"
poethepoet = "^0.25.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = "node_modules"

[tool.poe.tasks]
lint-imports = 'isort .'
lint-style = 'flake8'
lint-type = 'mypy .'
lint = ['lint-imports', 'lint-type', 'lint-style']
