[tool.poetry]
name = "demo-schedule-analyzer"
version = "0.1.0"
description = ""
authors = ["Noah Hinojos <noah.hinojos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
icalendar = "^5.0.11"
requests = "^2.31.0"
openpyxl = "^3.1.2"
black = "^23.11.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.4"
sqlalchemy = "^2.0.25"
flake8 = "^7.0.0"
poethepoet = "^0.25.0"
types-flask-cors = "^4.0.0.20240106"
types-requests = "^2.31.0.20240403"
types-openpyxl = "^3.1.0.20240402"
waitress = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [
    "node_modules",
    "site-packages",
    "bin"
]

[tool.mypy]
ignore_missing_imports = true

[tool.poe.tasks]
run = "python run.py"
lint = "flake8"
test = "python -m pytest"

[virtualenvs]
create = true
in-project = true